--- a/src/helper/html-webpack-plugin-template.html
+++ b/src/helper/html-webpack-plugin-template.html
@@ -6,8 +6,10 @@
     <meta name ="viewport" content ="initial-scale=1, maximum-scale=3, minimum-scale=1, user-scalable=no">
     <title>{%=o.htmlWebpackPlugin.options.title || 'Webpack App'%}</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </head>
 <body>
-    <div id="app-placeholder"></div>
+    <div id="app-placeholder" class="container"></div>
 </body>
 </html>
